--- a/Project.toml
+++ b/Project.toml
@@ -1,25 +1,10 @@
 [deps]
-BFloat16s = "ab4f0b2a-ad5b-11e8-123f-65d77653426b"
-CFTime = "179af706-886a-5703-950a-314cd64e0468"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
-CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
-ClimaSeaIce = "6ba0ff68-24e6-4315-936c-2e99227c95a4"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
-GPUArraysCore = "46192b85-c4d5-4398-a991-12ede77f4527"
-IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
-JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
-MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
-MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
-MbedTLS_jll = "c8ffd9c3-330d-5841-b78e-0817d7145fa1"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 Oceananigans = "9e8cae18-63c1-5223-a75c-80ca9d6e9a09"
 Oceanostics = "d0ccf422-c8fb-49b5-a76d-74acdde946ac"
-RollingFunctions = "b0e4dd01-7b14-53d8-9b45-175a3e362653"
-Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SeawaterPolynomials = "d496a93d-167e-4197-9f49-d3af4ff8fe40"
-
-[extras]
-CUDA_Runtime_jll = "76a88914-d11a-5bdc-97e0-2f5a05c973a2"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
